# BOOTCAMP__DYROS_Robotics_Bootcamp1

./: README.md  saved_numbers.bag
CMake Tutorial/src/: tutorial.cpp
CMake Tutorial/src/my_math/: mysqrt.cpp
DAY1/catkin_ws/src/dyros_practice_1/: package.xml  publisher_cpp_node.cpp
DAY1/catkin_ws/src/dyros_practice_1/scripts/: publisher_py_node.py
DAY1/catkin_ws/src/dyros_practice_2/: ABAngle.srv  package.xml
DAY1/catkin_ws/src/dyros_practice_2/scripts/: client_py_node.py  server_py_node.py
DAY1/catkin_ws/src/dyros_practice_2/src/: client_cpp_node.cpp
DAY1/devel/: _setup_util.py
DAY1/tutorial/: CMakeLists.txt  mysqrt.h
ROS/ROS Practice 1/: CMakeLists.txt
ROS/ROS Practice 1/launch/: pub_sub.launch  pub_sub_respawn.launch
ROS/ROS Practice 1/scripts/: subscriber_py_node.py
ROS/ROS Practice 1/src/: subscriber_cpp_node.cpp
ROS/ROS Practice 2/: CMakeLists.txt
ROS/ROS Practice 2/src/: server_cpp_node.cpp
ROS/ROS rosparam/: package.xml
ROS/ROS rosparam/scripts/: param_py_test.py
